alpm-types/src/snapshots/system::invalid_system_architecture_from_string@case_2.snap
---
source: alpm-types/src/system.rs
---
error: invalid system architecture. 'any' has a special meaning and is not allowed here.
 | 
 | any
 | ^
